modified chunk generator to java 8