@@ -4,20 +4,30 @@ import io.reactivestax.task.ChunkGenerator;
 import io.reactivestax.util.ApplicationPropertiesUtils;
 import io.reactivestax.util.QueueProvider;
 
-import java.io.*;
+import java.io.BufferedReader;
+import java.io.BufferedWriter;
+import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
+import java.util.concurrent.atomic.AtomicReference;
+import java.util.function.Supplier;
+import java.util.logging.Logger;
+import java.util.stream.IntStream;
+import java.util.stream.LongStream;
 
 public class ChunkGeneratorService implements ChunkGenerator {
 
     private static ChunkGeneratorService instance;
+    Logger logger = Logger.getLogger(ChunkGeneratorService.class.getName());
 
     private ChunkGeneratorService() {
     }
 
     public static synchronized ChunkGeneratorService getInstance() {
         if (instance == null) {
-            instance = new ChunkGeneratorService();
+            Supplier<ChunkGeneratorService> chunkGeneratorServiceSupplier = ChunkGeneratorService::new;
+            instance = chunkGeneratorServiceSupplier.get();
         }
 
         return instance;
@@ -29,31 +39,30 @@ public class ChunkGeneratorService implements ChunkGenerator {
         long numOfLines = applicationPropertiesUtils.getTotalNoOfLines();
         String path = applicationPropertiesUtils.getFilePath();
         int chunksCount = applicationPropertiesUtils.getNumberOfChunks();
-        int tempChunkCount = 1;
-        long tempLineCount = 0;
-        long linesCountPerFile = numOfLines / chunksCount;
+        long numOfLinesPerFile = Math.round((float) numOfLines / chunksCount);
         TradeService tradeService = TradeService.getInstance();
-        String chunkFilePath = tradeService.buildFilePath(tempChunkCount, applicationPropertiesUtils.getChunkFilePathWithName());
-        Files.createDirectories(Paths.get(applicationPropertiesUtils.getChunkDirectoryPath()));
-        BufferedWriter writer = new BufferedWriter(new FileWriter(chunkFilePath));
-        try (BufferedReader reader = new BufferedReader(new FileReader(path))) {
-            String line = reader.readLine();
-            while ((line = reader.readLine()) != null) {
-                writer.write(line);
-                writer.newLine();
-                tempLineCount++;
-                if (tempLineCount == linesCountPerFile && tempChunkCount != chunksCount) {
-                    tempChunkCount++;
-                    tempLineCount = 0;
-                    writer.close();
+        try (BufferedReader reader =
+                     Files.newBufferedReader(Path.of(path), StandardCharsets.UTF_8)) {
+            AtomicReference<String> line = new AtomicReference<>(reader.readLine());
+            IntStream.range(1, chunksCount + 1).forEach(fileNumber -> {
+                String chunkFilePath = tradeService.buildFilePath(fileNumber,
+                        applicationPropertiesUtils.getChunkFilePathWithName());
+                try (BufferedWriter writer = Files.newBufferedWriter(Path.of(chunkFilePath))) {
+                    LongStream.range(0, numOfLinesPerFile).forEach(lineNumber -> {
+                        try {
+                            line.set(reader.readLine());
+                            writer.write(line.get() != null ? line.get() : "");
+                            writer.newLine();
+                        } catch (IOException e) {
+                            logger.warning("IO Exception.");
+                        }
+                    });
                     QueueProvider.getInstance().getChunkQueue().put(chunkFilePath);
-                    chunkFilePath = tradeService.buildFilePath(tempChunkCount, applicationPropertiesUtils.getChunkFilePathWithName());
-                    writer = new BufferedWriter(new FileWriter(chunkFilePath));
+                } catch (IOException | InterruptedException e) {
+                    logger.warning("Exception while creating chunks.");
+                    Thread.currentThread().interrupt();
                 }
-            }
-            QueueProvider.getInstance().getChunkQueue().put(chunkFilePath);
-        } finally {
-            writer.close();
+            });
         }
     }
 }
